using System;
using System.Collections;
using System.Collections.Generic;

namespace Data
{
    public class AnimatorConstants
    {
        public const string FLYING_ANIMATION_NAME = "Flying";
        public const string JUMPING_ANIMATION_NAME = "Jumping";
        public const string JUMP_TRIGGER = "jump";
        public const string FLY_BOOL = "is_flying";
        public const string MOVE_FORWARD_BOOL = "is_moving_forward";
        public const string MOVE_BACK_BOOL = "is_moving_back";
        public static readonly string LANDING_TRIGGER = "landing";
    }
}